--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,14 @@ __pycache__/
 *.py[cod]
 *$py.class
 
+# PDF extensions
+*.pdf
+
 # C extensions
 *.so
+
+# data
+data/*
 
 # Distribution / packaging
 .Python
